@@ -1,5 +1,8 @@
 # Head
 
+- implemented the ROW() function (so long as it can be replaced at runtime)
+- implemented the COLUMN() function without arguments
+
 # 0.2.5 - 2013 January 13th
 
 - named_references_to_keep and named_references_that_can_be_set_at_runtime can now be passed a block which will be called with each named reference. Returning true will make the named reference kept / settable
